[gd_scene load_steps=4 format=3 uid="uid://7h0xoltr88by"]

[ext_resource type="Script" path="res://scripts/order_manager.gd" id="1_1adxb"]
[ext_resource type="Script" path="res://scripts/order_spawner.gd" id="1_q8yj8"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2bj1w"]
size = Vector2(219, 635)

[node name="order_spawner" type="Area2D"]
script = ExtResource("1_1adxb")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1035.5, 324.5)
shape = SubResource("RectangleShape2D_2bj1w")
script = ExtResource("1_q8yj8")

[node name="Timer" type="Timer" parent="CollisionShape2D"]
wait_time = 5.0
autostart = true

[connection signal="package_info" from="." to="CollisionShape2D" method="_on_order_spawner_package_info"]
[connection signal="usable_catalog" from="." to="CollisionShape2D" method="_on_order_spawner_usable_catalog"]
[connection signal="timeout" from="CollisionShape2D/Timer" to="CollisionShape2D" method="_on_timer_timeout"]
